# QuantumAlgTrading_RP

./: .gitignore  README.md
Documents/Article/: article.tex  article.txt
Documents/First_Idea/: First_Idea.aux  First_Idea.fdb_latexmk  First_Idea.fls  First_Idea.tex  First_Idea.toc
Literature/: interesting_liks
qAlgTrading/: TODO.txt  example.json  pyproject.toml  requirements.txt  run_tests.sh  setup.sh
qAlgTrading/jsons/: AAPL.json  ADBE.json  AMZN.json  BAC.json  BRK-B.json  CDR.json  COST.json  CVX.json  HD.json  META.json  MSFT.json  NFLX.json  NVDA.json  PKO.json  S&P.json  TSLA.json  example.json  wig_20.json
qAlgTrading/src/: main.py
qAlgTrading/src/algorithms/: PcaAlgorithm.py  QPcaAlgorithm.py  QSvmAlgorithm.py  SvmAlgorithm.py  classicAlgorithm.py  quantumAlgorithm.py  tradingAlgorithm.py
qAlgTrading/src/algorithms/qpca/: QPCA.py  QPCA_4x4eigenstate.py  QPCA_QPhE.py  QPCA_eigenstate.py
qAlgTrading/src/qAlgTrading/algorithms/: PcaAlgorithm.py  QPcaAlgorithm.py  QSvmAlgorithm.py  SvmAlgorithm.py
qAlgTrading/src/qAlgTrading/testingEnviroment/: PredictionPerformer.py
qAlgTrading/src/qAlgTrading/tests/algorithms/: TestTradingAlgorithm.py
qAlgTrading/src/qAlgTrading/tradingAgent/: BuyAndKeepTrader.py  RemainValueTrader.py  WholeValueTrader.py
qAlgTrading/src/testingEnviroment/: TraderSimulator.py  __init__.py  algorithmTester.py  resultsPresenter.py  testDataInitializer.py
qAlgTrading/src/tests/algorithms/: TestTradingAlgorithm.py
qAlgTrading/src/tradingAgent/: Trader.py  WholeValueTrader.py  __init__.py
src/: setup.sh
(+149 files in other folders)
