[build-system]
# Informuje, że korzystamy z setuptools i wheel do buildowania
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qAlgTrading"
version = "0.1.0"
description = "algorithm trading "
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
requires-python = ">=3.13"

# Tutaj wskazujesz biblioteki, których wymaga Twój projekt
dependencies = [
  "qiskit==1.4.2",
  "symengine==0.13.0",
  "numpy>=2.2.5",
  "qiskit-aer==0.17.0",
  "qiskit-machine-learning==0.8.2",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
  "tqdm>=4.67.1"
  ]

# Opcjonalnie dodajesz klasyfikatory przydatne w ekosystemie PyPI
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["src"]
